This document will focus on the release notes of vlc-unity itself, unless specified otherwise.

For LibVLC changes, head over to https://code.videolan.org/videolan/vlc/-/blob/master/NEWS and the git history.
For LibVLCSharp changes, see https://code.videolan.org/videolan/LibVLCSharp/-/blob/master/NEWS.

2025-2 (All platforms)
0.2.1 macOS
0.2.2 Windows
0.2.4 Android
0.2.3 iOS
0.2.0 UWP
- engine update from 19/05 with many bug fixes and improvements
- get_time while paused core fix: https://code.videolan.org/videolan/vlc/-/merge_requests/7219
- PTS VPx core crash fix: https://code.videolan.org/videolan/vlc/-/merge_requests/7213
- Android build against NDK 27
- Trial: GPU watermark on Windows

First all-platform release, 2025-1
- updated engines for all platforms

0.2.3 Android
0.2.0 macOS
0.2.1 Windows
- engine update from 08/04
- Add support for GameActivity (Unity 6)
- samples: update and improve 360 sample,
- editor: error on d3d12 and vulkan config selection

0.2.2 Android
- engine update from 17/02 to include a memory leak fix for https://code.videolan.org/videolan/vlc-unity/-/issues/233

0.2.2 iOS
0.1.9 macOS
0.2.1 Android
0.1.9 UWP
0.2.0 Windows
- engine update from 21/01/2025, bug fixes and performance optimizations
- android: cleanup needs a makeCurrent
- Oculus: support low overhead mode
- editor integration improvements

0.1.9 Windows release
- engine update https://code.videolan.org/videolan/vlc/-/commit/0dd67938c0
- scenes: new chromecast and webm transparent video support

0.2.0 Android

- Engine update https://code.videolan.org/videolan/vlc/-/commit/9bf69cf

0.2.1 iOS
- Fix various Editor iOS build configuration when on Windows
- Fix RTSP support using live555
- Fix App Store validation error regarding LoadPlugin.mm source file in final .ipa

0.1.8 macOS
- initial macOS release, both Apple Silicon and x64 CPUs are supported.

0.2.0 iOS